[nit]메니페스트 오류

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,11 +15,30 @@
         android:theme="@style/Theme.Synergy"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
-      
+        <!--        <activity-->
+        <!--            android:name=".edu_space.default_app.activity.DefaultMenuActivity"-->
+        <!--            android:exported="false" />-->
+        <!--        <activity-->
+        <!--            android:name=".edu_space.default_app.activity.DefaultLockedScreenActivity"-->
+        <!--            android:exported="true">-->
+        <!--            <intent-filter>-->
+        <!--                <action android:name="android.intent.action.MAIN" />-->
+
+        <!--                <category android:name="android.intent.category.LAUNCHER" />-->
+        <!--            </intent-filter>-->
+        <!--        </activity>-->
+        <!--        <activity-->
+        <!--            android:name=".edu_space.default_app.activity.DefaultHomeActivity"-->
+        <!--            android:exported="true">-->
+        <!--            <intent-filter>-->
+        <!--                <action android:name="android.intent.action.MAIN" />-->
+
+        <!--                <category android:name="android.intent.category.LAUNCHER" />-->
+        <!--            </intent-filter>-->
+        <!--        </activity>-->
         <activity
             android:name=".edu_space.default_app.activity.DefaultMessageChattingActivity"
-            android:exported="false">
-        </activity> <!-- 메시지 채팅 화면 -->
+            android:exported="false" /> <!-- 메시지 채팅 화면 -->
         <activity
             android:name=".edu_space.naver.activity.NaverSearchResultActivity"
             android:exported="false" /> <!-- 네이버 검색 결과 화면 -->
@@ -31,17 +50,17 @@
             android:exported="false" /> <!-- 디지털 나이 검사 -->
         <activity
             android:name=".MainActivity"
-            android:exported="true"> <!-- 메인화면 -->
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:exported="false">
+            <!-- 메인화면 -->
+            <!--            <intent-filter>-->
+            <!--                <action android:name="android.intent.action.MAIN" />-->
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            <!--                <category android:name="android.intent.category.LAUNCHER" />-->
+            <!--            </intent-filter>-->
         </activity>
         <activity
             android:name=".edu_space.default_app.activity.DefaultMessageActivity"
-            android:exported="false">
-        </activity> <!-- 메시지 화면 -->
+            android:exported="false" /> <!-- 메시지 화면 -->
         <activity
             android:name=".EduSpaceActivity"
             android:exported="false" /> <!-- 삭제할 거 -->
@@ -54,35 +73,51 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
+        </activity> <!-- 아이콘 첫화면 -->
+<!--        <activity-->
+<!--            android:name=".edu_space.icon_edu.activity.IconEduActivity"-->
+<!--            android:exported="false"></activity> &lt;!&ndash; 화면구성 &ndash;&gt;-->
+        <!--    <activity-->
+        <!--        android:name=".edu_space.default_app.activity.MenusActivity"-->
+        <!--        android:exported="true">-->
+        <!--        <intent-filter>-->
+        <!--            <action android:name="android.intent.action.MAIN" />-->
+
+        <!--            <category android:name="android.intent.category.LAUNCHER" />-->
+        <!--        </intent-filter>-->
+        <!--    </activity> &lt;!&ndash; 아이콘 설명 &ndash;&gt;-->
         <!-- 화면구성 -->
         <activity
             android:name=".edu_space.screen_layout.ScreenLayoutActivity"
-            android:exported="false" />
-        <!-- 기본앱 활용 -->
+            android:exported="false" /> <!-- 기본앱 활용 -->
         <activity
             android:name=".edu_space.default_app.activity.DefaultPhoneActivity"
-
-            android:exported="false">
-        </activity> <!-- 전화 화면 -->
+            android:exported="false" /> <!-- 전화 화면 -->
         <activity
             android:name=".edu_space.default_app.activity.DefaultPhoneCallActivity"
-            android:exported="false" /> <!-- 전화 콜 화면 -->
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity> <!-- 전화 콜 화면 -->
         <activity
             android:name=".edu_space.default_app.activity.DefaultCameraActivity"
-            android:exported="false">
-        </activity> <!-- 카메라 화면 -->
+            android:exported="false" /> <!-- 카메라 화면 -->
         <activity
             android:name=".edu_space.default_app.activity.DefaultCameraGalleryViewActivity"
-            android:exported="false"/> <!-- 카메라 갤러리 뷰 화면 -->
+            android:exported="false" /> <!-- 카메라 갤러리 뷰 화면 -->
         <!-- 환경설정2 -->
-<!--        <activity-->
-<!--            android:name=".edu_space.settingedu.activity.SettingEduActivity"-->
-<!--            android:exported="true" /> &lt;!&ndash; 환경설정 시작 &ndash;&gt;-->
+        <!-- 환경설정 시작 -->
         <activity
             android:name=".edu_space.settingedu2.Setting2MainActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false" /><!-- <activity -->
+        <!-- android:name=".edu_space.settingedu.activity.SettingEduActivity" -->
+        <!-- android:exported="true" /> &lt;!&ndash; 환경설정 시작 &ndash;&gt; -->
+<!--        <activity-->
+<!--            android:name=".edu_space.settingedu2.Setting2MainActivity"-->
+<!--            android:exported="false"></activity>-->
         <activity
             android:name=".edu_space.settingedu2.Setting2DisplayActivity"
             android:exported="false" />
@@ -91,8 +126,7 @@
             android:exported="false" /> <!-- 계정생성 교육 -->
         <activity
             android:name=".edu_space.accountedu.GoogleMainActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false" />
         <activity
             android:name=".edu_space.accountedu.GoogleLoginActivity"
             android:exported="false" />
@@ -116,8 +150,7 @@
             android:exported="false" />
         <activity
             android:name=".edu_space.accountedu.GoogleMailAddActivity"
-            android:exported="false" />
-        <!-- 이 부분 아래에 넣어주세요 -->
+            android:exported="false" /> <!-- 앱 설치 -->
         <activity
             android:name=".edu_space.appinstall.installActivity"
             android:exported="false" />
@@ -126,15 +159,13 @@
             android:exported="false" /> <!-- 앱 설치 메인 화면 -->
         <activity
             android:name=".edu_space.kakaotalk.activity.KakaoMainActivity"
-            android:exported="false">
-        </activity> <!-- 카카오톡 메인 화면 -->
+            android:exported="false" /> <!-- 카카오톡 메인 화면 --><!-- 카카오톡 메인 화면 -->
         <activity
             android:name=".edu_space.kakaotalk.activity.KakaoProfileDetailActivity"
             android:exported="false" />
         <activity
             android:name=".edu_space.kakaotalk.activity.KakaoChattingActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false" />
         <activity
             android:name=".edu_space.naver.activity.NaverSearchActivity"
             android:exported="false" /> <!-- 네이버 검색 화면 -->
@@ -142,6 +173,9 @@
             android:name=".edu_space.naver.activity.NaverActivity"
             android:exported="false"> <!-- 네이버 화면 -->
         </activity>
+<!--        <activity-->
+<!--            android:name=".edu_space.naver.activity.NaverActivity"-->
+<!--            android:exported="false" /> &lt;!&ndash; 코레일 &ndash;&gt;-->
         <!-- 이 부분 아래에 넣어주세요 -->
         <activity
             android:name=".edu_space.ticket.TicketMainActivity"
@@ -179,27 +213,28 @@
         <activity
             android:name=".edu_space.delivery.foodmenuActivity"
             android:exported="false" />
-
-        <!-- TODO : 수진 - backend TEST -->
         <activity
             android:name=".backend.BackendTest"
-            android:exported="false" />
-        <activity
-            android:name=".learning_space.default_app.camera.CameraTest"
-            android:exported="false"></activity>
-        <activity
-            android:name=".learning_space.default_app.camera.LearningDefaultAppCamera"
-            android:exported="false" />
+            android:exported="false" /> <!-- TODO : 수진 - backend TEST -->
+        <!-- <intent-filter> -->
+        <!-- <action android:name="android.intent.action.MAIN" /> -->
+        <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+        <!-- </intent-filter> -->
+<!--        <activity-->
+        <!--            android:name=".learning_space.default_app.camera.CameraTest"-->
+        <!--            android:exported="false" />-->
+        <!--        <activity-->
+        <!--            android:name=".learning_space.default_app.camera.LearningDefaultAppCamera"-->
+        <!--            android:exported="false" />-->
         <activity
             android:name=".learning_space.intent.LearningScreenActivity"
             android:exported="false" />
-
         <activity
             android:name=".learning_space.intent.LearningDefaultAppActivity"
             android:exported="false" />
         <activity
-        android:name=".learning_space.intent.LearningSettingActivity"
-        android:exported="false" />
+            android:name=".learning_space.intent.LearningSettingActivity"
+            android:exported="false" />
         <activity
             android:name=".learning_space.intent.LearningDeliveryActivity"
             android:exported="false" />
@@ -220,9 +255,9 @@
             android:exported="false" />
         <activity
             android:name=".learning_space.intent.LearningIconActivity"
-            android:exported="false">          
-        </activity>
+            android:exported="false">
 
+        </activity>
     </application>
 
 </manifest>
