--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,7 +73,11 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity> <!-- 아이콘 첫화면 -->
+        </activity>
+        <activity
+            android:name=".edu_space.icon_edu.activity.IconDetailActivity"
+            android:exported="false"/>
+        <!-- 아이콘 첫화면 -->
 <!--        <activity-->
 <!--            android:name=".edu_space.icon_edu.activity.IconEduActivity"-->
 <!--            android:exported="false"></activity> &lt;!&ndash; 화면구성 &ndash;&gt;-->
