--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,27 +15,28 @@
         android:theme="@style/Theme.Synergy"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
-        <!--        <activity-->
-        <!--            android:name=".edu_space.default_app.activity.DefaultMenuActivity"-->
-        <!--            android:exported="false" />-->
-        <!--        <activity-->
-        <!--            android:name=".edu_space.default_app.activity.DefaultLockedScreenActivity"-->
-        <!--            android:exported="true">-->
-        <!--            <intent-filter>-->
-        <!--                <action android:name="android.intent.action.MAIN" />-->
-
-        <!--                <category android:name="android.intent.category.LAUNCHER" />-->
-        <!--            </intent-filter>-->
-        <!--        </activity>-->
-        <!--        <activity-->
-        <!--            android:name=".edu_space.default_app.activity.DefaultHomeActivity"-->
-        <!--            android:exported="true">-->
-        <!--            <intent-filter>-->
-        <!--                <action android:name="android.intent.action.MAIN" />-->
-
-        <!--                <category android:name="android.intent.category.LAUNCHER" />-->
-        <!--            </intent-filter>-->
-        <!--        </activity>-->
+        <activity
+            android:name=".edu_space.default_app.activity.DefaultGalleryActivity"
+            android:exported="false" />
+        <!-- <activity -->
+        <!-- android:name=".edu_space.default_app.activity.DefaultMenuActivity" -->
+        <!-- android:exported="false" /> -->
+        <!-- <activity -->
+        <!-- android:name=".edu_space.default_app.activity.DefaultLockedScreenActivity" -->
+        <!-- android:exported="true"> -->
+        <!-- <intent-filter> -->
+        <!-- <action android:name="android.intent.action.MAIN" /> -->
+        <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+        <!-- </intent-filter> -->
+        <!-- </activity> -->
+        <!-- <activity -->
+        <!-- android:name=".edu_space.default_app.activity.DefaultHomeActivity" -->
+        <!-- android:exported="true"> -->
+        <!-- <intent-filter> -->
+        <!-- <action android:name="android.intent.action.MAIN" /> -->
+        <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+        <!-- </intent-filter> -->
+        <!-- </activity> -->
         <activity
             android:name=".edu_space.default_app.activity.DefaultMessageChattingActivity"
             android:exported="false" /> <!-- 메시지 채팅 화면 -->
@@ -51,12 +52,14 @@
         <activity
             android:name=".MainActivity"
             android:exported="false">
-            <!-- 메인화면 -->
-            <!--            <intent-filter>-->
-            <!--                <action android:name="android.intent.action.MAIN" />-->
 
-            <!--                <category android:name="android.intent.category.LAUNCHER" />-->
-            <!--            </intent-filter>-->
+            <!-- 메인화면 -->
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
         </activity>
         <activity
             android:name=".edu_space.default_app.activity.DefaultMessageActivity"
@@ -76,20 +79,18 @@
         </activity>
         <activity
             android:name=".edu_space.icon_edu.activity.IconDetailActivity"
-            android:exported="false"/>
-        <!-- 아이콘 첫화면 -->
-<!--        <activity-->
-<!--            android:name=".edu_space.icon_edu.activity.IconEduActivity"-->
-<!--            android:exported="false"></activity> &lt;!&ndash; 화면구성 &ndash;&gt;-->
-        <!--    <activity-->
-        <!--        android:name=".edu_space.default_app.activity.MenusActivity"-->
-        <!--        android:exported="true">-->
-        <!--        <intent-filter>-->
-        <!--            <action android:name="android.intent.action.MAIN" />-->
-
-        <!--            <category android:name="android.intent.category.LAUNCHER" />-->
-        <!--        </intent-filter>-->
-        <!--    </activity> &lt;!&ndash; 아이콘 설명 &ndash;&gt;-->
+            android:exported="false" /> <!-- 아이콘 첫화면 -->
+        <!-- <activity -->
+        <!-- android:name=".edu_space.icon_edu.activity.IconEduActivity" -->
+        <!-- android:exported="false"></activity> &lt;!&ndash; 화면구성 &ndash;&gt; -->
+        <!-- <activity -->
+        <!-- android:name=".edu_space.default_app.activity.MenusActivity" -->
+        <!-- android:exported="true"> -->
+        <!-- <intent-filter> -->
+        <!-- <action android:name="android.intent.action.MAIN" /> -->
+        <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+        <!-- </intent-filter> -->
+        <!-- </activity> &lt;!&ndash; 아이콘 설명 &ndash;&gt; -->
         <!-- 화면구성 -->
         <activity
             android:name=".edu_space.screen_layout.ScreenLayoutActivity"
@@ -116,12 +117,12 @@
         <!-- 환경설정 시작 -->
         <activity
             android:name=".edu_space.settingedu2.Setting2MainActivity"
-            android:exported="false" /><!-- <activity -->
+            android:exported="false" /> <!-- <activity -->
         <!-- android:name=".edu_space.settingedu.activity.SettingEduActivity" -->
         <!-- android:exported="true" /> &lt;!&ndash; 환경설정 시작 &ndash;&gt; -->
-<!--        <activity-->
-<!--            android:name=".edu_space.settingedu2.Setting2MainActivity"-->
-<!--            android:exported="false"></activity>-->
+        <!-- <activity -->
+        <!-- android:name=".edu_space.settingedu2.Setting2MainActivity" -->
+        <!-- android:exported="false"></activity> -->
         <activity
             android:name=".edu_space.settingedu2.Setting2DisplayActivity"
             android:exported="false" />
@@ -163,7 +164,8 @@
             android:exported="false" /> <!-- 앱 설치 메인 화면 -->
         <activity
             android:name=".edu_space.kakaotalk.activity.KakaoMainActivity"
-            android:exported="false" /> <!-- 카카오톡 메인 화면 --><!-- 카카오톡 메인 화면 -->
+            android:exported="false" /> <!-- 카카오톡 메인 화면 -->
+        <!-- 카카오톡 메인 화면 -->
         <activity
             android:name=".edu_space.kakaotalk.activity.KakaoProfileDetailActivity"
             android:exported="false" />
@@ -176,10 +178,9 @@
         <activity
             android:name=".edu_space.naver.activity.NaverActivity"
             android:exported="false"> <!-- 네이버 화면 -->
-        </activity>
-<!--        <activity-->
-<!--            android:name=".edu_space.naver.activity.NaverActivity"-->
-<!--            android:exported="false" /> &lt;!&ndash; 코레일 &ndash;&gt;-->
+        </activity> <!-- <activity -->
+        <!-- android:name=".edu_space.naver.activity.NaverActivity" -->
+        <!-- android:exported="false" /> &lt;!&ndash; 코레일 &ndash;&gt; -->
         <!-- 이 부분 아래에 넣어주세요 -->
         <activity
             android:name=".edu_space.ticket.TicketMainActivity"
@@ -224,12 +225,12 @@
         <!-- <action android:name="android.intent.action.MAIN" /> -->
         <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
         <!-- </intent-filter> -->
-<!--        <activity-->
-        <!--            android:name=".learning_space.default_app.camera.CameraTest"-->
-        <!--            android:exported="false" />-->
-        <!--        <activity-->
-        <!--            android:name=".learning_space.default_app.camera.LearningDefaultAppCamera"-->
-        <!--            android:exported="false" />-->
+        <!-- <activity -->
+        <!-- android:name=".learning_space.default_app.camera.CameraTest" -->
+        <!-- android:exported="false" /> -->
+        <!-- <activity -->
+        <!-- android:name=".learning_space.default_app.camera.LearningDefaultAppCamera" -->
+        <!-- android:exported="false" /> -->
         <activity
             android:name=".learning_space.intent.LearningScreenActivity"
             android:exported="false" />
@@ -259,9 +260,7 @@
             android:exported="false" />
         <activity
             android:name=".learning_space.intent.LearningIconActivity"
-            android:exported="false">
-
-        </activity>
+            android:exported="false"></activity>
     </application>
 
 </manifest>
