--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -85,6 +85,18 @@
         <activity
             android:name=".edu_space.icon_edu.activity.IconDetailActivity"
             android:exported="false" /> <!-- 아이콘 첫화면 -->
+        <activity
+            android:name=".edu_space.move_edu.activity.MoveEduActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".edu_space.move_edu.activity.MoveDetailActivity"
+            android:exported="false"/>
         <!-- <activity -->
         <!-- android:name=".edu_space.icon_edu.activity.IconEduActivity" -->
         <!-- android:exported="false"></activity> &lt;!&ndash; 화면구성 &ndash;&gt; -->
@@ -177,13 +189,7 @@
             android:exported="false" /> <!-- 네이버 검색 화면 -->
         <activity
             android:name=".edu_space.naver.activity.NaverActivity"
-            android:exported="true" > <!-- 네이버 화면 -->
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="false" /> <!-- 네이버 화면 -->
         <activity
             android:name=".edu_space.naver.activity.NaverSearchInfoActivity"
             android:exported="false" />
