--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -112,13 +112,8 @@
             android:exported="false" /> <!-- 전화 화면 -->
         <activity
             android:name=".edu_space.default_app.activity.DefaultPhoneCallActivity"
-            android:exported="true"> <!-- 전화 콜 화면 -->
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:exported="false"/> <!-- 전화 콜 화면 -->
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
 
         <activity
             android:name=".edu_space.default_app.activity.DefaultCameraActivity"
@@ -171,16 +166,21 @@
 
         <activity
             android:name=".edu_space.appinstall.installActivity" 
-            android:exported="true" > <!-- 앱 설치 -->
+            android:exported="false" /> <!-- 앱 설치 -->
+
+        <activity
+            android:name=".edu_space.appinstall.installMainActivity"
+            android:exported="false" /> <!-- 앱 설치 메인 화면 -->
+
+        <activity
+            android:name=".edu_space.appinstall.AppInstallMainActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".edu_space.appinstall.installMainActivity"
-            android:exported="false" /> <!-- 앱 설치 메인 화면 -->
         <activity
             android:name=".edu_space.kakaotalk.activity.KakaoMainActivity"
             android:exported="false" /> <!-- 카카오톡 메인 화면 -->
