--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,18 +17,18 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31" >
         <activity
-            android:name=".edu_space.default_app.activity.DefaultAppBarActivity"
+            android:name=".edu_space.default_app.todo.DefaultAppBarActivity"
             android:exported="false" />
 
 
         <activity
-            android:name=".edu_space.default_app.activity.DefaultMenuActivity"
+            android:name=".edu_space.default_app.todo.DefaultMenuActivity"
             android:exported="false" />
         <activity
-            android:name=".edu_space.default_app.activity.DefaultLockedScreenActivity"
+            android:name=".edu_space.default_app.todo.DefaultLockedScreenActivity"
             android:exported="false" />
         <activity
-            android:name=".edu_space.default_app.activity.DefaultHomeActivity"
+            android:name=".edu_space.default_app.todo.DefaultHomeActivity"
             android:exported="false" />
              <!-- <activity -->
             <!-- <activity -->
@@ -51,13 +51,13 @@
         <!-- </intent-filter> -->
         <!-- </activity> -->
         <activity
-            android:name=".edu_space.default_app.activity.DefaultMessageChattingActivity"
+            android:name=".edu_space.default_app.message.activity.DefaultMessageChattingActivity"
             android:exported="false" /> <!-- 메시지 채팅 화면 -->
         <activity
             android:name=".edu_space.naver.activity.NaverSearchResultActivity"
             android:exported="false" /> <!-- 네이버 검색 결과 화면 -->
         <activity
-            android:name=".edu_space.default_app.activity.DefaultAppActivity"
+            android:name=".edu_space.default_app.DefaultAppActivity"
             android:exported="false" /> <!-- 기본 앱 화면 -->
         <activity
             android:name=".main.activity.DigitalStartActivity"
@@ -68,7 +68,7 @@
             <!-- 메인화면 -->
 
         <activity
-            android:name=".edu_space.default_app.activity.DefaultMessageActivity"
+            android:name=".edu_space.default_app.message.activity.DefaultMessageActivity"
             android:exported="false" /> <!-- 메시지 화면 -->
         <activity
             android:name=".EduSpaceActivity"
@@ -80,7 +80,7 @@
              <!-- 아이콘 첫화면 -->
         <!-- 화면구성 -->
         <activity
-            android:name=".edu_space.default_app.activity.MenusActivity"
+            android:name=".edu_space.default_app.todo.MenusActivity"
             android:exported="false" />
              <!-- 아이콘 설명 -->
         <activity
@@ -108,13 +108,13 @@
             android:name=".edu_space.screen_layout.ScreenLayoutActivity"
             android:exported="false" /> <!-- 기본앱 활용 -->
         <activity
-            android:name=".edu_space.default_app.activity.DefaultPhoneActivity"
+            android:name=".edu_space.default_app.phone.activity.DefaultPhoneActivity"
             android:exported="false" /> <!-- 전화 화면 -->
         <activity
-            android:name=".edu_space.default_app.activity.DefaultPhoneCallActivity"
+            android:name=".edu_space.default_app.phone.activity.DefaultPhoneCallActivity"
             android:exported="false"/> <!-- 전화 콜 화면 -->
         <activity
-            android:name=".edu_space.default_app.activity.DefaultPhoneAddActivity"
+            android:name=".edu_space.default_app.phone.activity.DefaultPhoneAddActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -125,10 +125,10 @@
 "
 
         <activity
-            android:name=".edu_space.default_app.activity.DefaultCameraActivity"
+            android:name=".edu_space.default_app.camera.activity.DefaultCameraActivity"
             android:exported="false" /> <!-- 카메라 화면 -->
         <activity
-            android:name=".edu_space.default_app.activity.DefaultCameraGalleryViewActivity"
+            android:name=".edu_space.default_app.camera.activity.DefaultCameraGalleryViewActivity"
             android:exported="false" /><!-- 카메라 갤러리 뷰 화면 -->
 
         <!-- 환경설정2 -->
