--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,9 +19,7 @@
         tools:targetApi="31" >
         <activity
             android:name=".edu_space.default_app.activity.DefaultAppBarActivity"
-            android:exported="false" />
-
-
+            android:exported="false"/>
         <activity
             android:name=".edu_space.default_app.activity.DefaultMenuActivity"
             android:exported="false" />
@@ -31,26 +29,6 @@
         <activity
             android:name=".edu_space.default_app.activity.DefaultHomeActivity"
             android:exported="false" />
-             <!-- <activity -->
-            <!-- <activity -->
-        <!-- android:name=".edu_space.default_app.activity.DefaultMenuActivity" -->
-        <!-- android:exported="false" /> -->
-        <!-- <activity -->
-        <!-- android:name=".edu_space.default_app.activity.DefaultLockedScreenActivity" -->
-        <!-- android:exported="true"> -->
-        <!-- <intent-filter> -->
-        <!-- <action android:name="android.intent.action.MAIN" /> -->
-        <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
-        <!-- </intent-filter> -->
-        <!-- </activity> -->
-        <!-- <activity -->
-        <!-- android:name=".edu_space.default_app.activity.DefaultHomeActivity" -->
-        <!-- android:exported="true"> -->
-        <!-- <intent-filter> -->
-        <!-- <action android:name="android.intent.action.MAIN" /> -->
-        <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
-        <!-- </intent-filter> -->
-        <!-- </activity> -->
         <activity
             android:name=".edu_space.default_app.activity.DefaultMessageChattingActivity"
             android:exported="false" /> <!-- 메시지 채팅 화면 -->
@@ -89,7 +67,7 @@
             android:exported="false" /> <!-- 아이콘 첫화면 -->
         <activity
             android:name=".edu_space.move_edu.activity.MoveEduActivity"
-            android:exported="true">
+            android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
