--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_SETTINGS"
+    <uses-permission
+        android:name="android.permission.WRITE_SETTINGS"
         tools:ignore="ProtectedPermissions" />
 
     <application
@@ -16,7 +17,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Synergy"
         android:usesCleartextTraffic="true"
-        tools:targetApi="31" >
+        tools:targetApi="31">
         <activity
             android:name=".edu_space.default_app.todo.DefaultAppBarActivity"
             android:exported="false" />
@@ -31,12 +32,13 @@
             android:exported="false" />
         <activity
             android:name=".edu_space.default_app.message.activity.DefaultMessageActivity"
-            android:exported="false"/> <!-- 메시지 화면 -->
+            android:exported="false" /> <!-- 메시지 화면 -->
         <activity
             android:name=".edu_space.default_app.message.activity.DefaultMessageChattingActivity"
-            android:exported="false"/> <!-- 메시지 채팅 화면 -->
-        <activity android:name=".edu_space.default_app.message.activity.DefaultMessageSelectActivity"
-            android:exported="false"/>
+            android:exported="false" /> <!-- 메시지 채팅 화면 -->
+        <activity
+            android:name=".edu_space.default_app.message.activity.DefaultMessageSelectActivity"
+            android:exported="false" />
         <activity
             android:name=".edu_space.naver.activity.NaverSearchResultActivity"
             android:exported="false" /> <!-- 네이버 검색 결과 화면 -->
@@ -48,15 +50,13 @@
             android:exported="false" /> <!-- 디지털 나이 검사 -->
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-        </activity>
-            <!-- 메인화면 -->
-
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity> <!-- 메인화면 -->
         <activity
             android:name=".EduSpaceActivity"
             android:exported="false" /> <!-- 삭제할 거 -->
@@ -64,22 +64,20 @@
         <activity
             android:name=".edu_space.icon_edu.activity.IconEduActivity"
             android:exported="false" /> <!-- 아이콘 첫 화면 -->
-             <!-- 아이콘 첫화면 -->
+        <!-- 아이콘 첫화면 -->
         <!-- 화면구성 -->
         <activity
             android:name=".edu_space.default_app.todo.MenusActivity"
-            android:exported="false" />
-             <!-- 아이콘 설명 -->
+            android:exported="false" /> <!-- 아이콘 설명 -->
         <activity
             android:name=".edu_space.icon_edu.activity.IconDetailActivity"
             android:exported="false" /> <!-- 아이콘 첫화면 -->
         <activity
             android:name=".edu_space.move_edu.activity.MoveEduActivity"
-            android:exported="false"/>
-
-        <activity android:name=".edu_space.move_edu.activity.MoveDetailActivity"
-            android:exported="false"/>
-        <!-- <activity -->
+            android:exported="false" />
+        <activity
+            android:name=".edu_space.move_edu.activity.MoveDetailActivity"
+            android:exported="false" /> <!-- <activity -->
         <!-- android:name=".edu_space.icon_edu.activity.IconEduActivity" -->
         <!-- android:exported="false"></activity> &lt;!&ndash; 화면구성 &ndash;&gt; -->
         <!-- <activity -->
@@ -99,27 +97,22 @@
             android:exported="false" /> <!-- 전화 화면 -->
         <activity
             android:name=".edu_space.default_app.phone.activity.DefaultPhoneCallActivity"
-            android:exported="false"/> <!-- 전화 콜 화면 -->
-
+            android:exported="false" /> <!-- 전화 콜 화면 -->
         <activity
             android:name=".edu_space.default_app.phone.activity.DefaultPhoneAddActivity"
-            android:exported="true"> <!--전화 연락처 추가화면 -->
+            android:exported="true"> <!-- 전화 연락처 추가화면 -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-"
-
         <activity
             android:name=".edu_space.default_app.camera.activity.DefaultCameraActivity"
             android:exported="false" /> <!-- 카메라 화면 -->
         <activity
             android:name=".edu_space.default_app.camera.activity.DefaultCameraGalleryViewActivity"
-            android:exported="false" /><!-- 카메라 갤러리 뷰 화면 -->
-
+            android:exported="false" /> <!-- 카메라 갤러리 뷰 화면 -->
         <!-- 환경설정2 -->
         <!-- 환경설정 시작 -->
         <activity
@@ -160,20 +153,16 @@
             android:exported="false" />
         <activity
             android:name=".edu_space.accountedu.GoogleMailAddActivity"
-            android:exported="false" /> 
-
+            android:exported="false" />
         <activity
-            android:name=".edu_space.appinstall.installActivity" 
+            android:name=".edu_space.appinstall.installActivity"
             android:exported="false" /> <!-- 앱 설치 -->
-
         <activity
             android:name=".edu_space.appinstall.installMainActivity"
             android:exported="false" /> <!-- 앱 설치 메인 화면 -->
-
         <activity
             android:name=".edu_space.appinstall.AppInstallMainActivity"
             android:exported="false" />
-
         <activity
             android:name=".edu_space.appinstall.AppInstallSearchActivity"
             android:exported="false" /> <!-- 앱 설치 검색 화면 -->
@@ -193,12 +182,9 @@
         <activity
             android:name=".edu_space.naver.activity.NaverActivity"
             android:exported="false" /> <!-- 네이버 화면 -->
-
-
         <activity
             android:name=".edu_space.naver.activity.NaverSearchInfoActivity"
-            android:exported="false" />
-        <!-- 코레일 -->
+            android:exported="false" /> <!-- 코레일 -->
         <!-- <activity -->
         <!-- android:name=".edu_space.naver.activity.NaverActivity" -->
         <!-- android:exported="false" /> &lt;!&ndash; 코레일 &ndash;&gt; -->
@@ -229,7 +215,7 @@
             android:exported="false" /> <!-- 배달의 민족 -->
         <activity
             android:name=".edu_space.delivery.DlvMainActivity"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
             android:name=".edu_space.delivery.shopActivity"
             android:exported="false" />
@@ -242,7 +228,6 @@
         <activity
             android:name=".backend.BackendTest"
             android:exported="false" />
-
         <activity
             android:name=".learning_space.intent.LearningScreenActivity"
             android:exported="false" />
@@ -272,9 +257,7 @@
             android:exported="false" />
         <activity
             android:name=".learning_space.intent.LearningIconActivity"
-
             android:exported="false" />
-
     </application>
 
 </manifest>
