--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,13 +50,8 @@
             android:exported="false" /> <!-- 디지털 나이 검사 -->
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity> <!-- 메인화면 -->
+            android:exported="false"/>
+             <!-- 메인화면 -->
         <activity
             android:name=".EduSpaceActivity"
             android:exported="false" /> <!-- 삭제할 거 -->
@@ -100,13 +95,8 @@
             android:exported="false" /> <!-- 전화 콜 화면 -->
         <activity
             android:name=".edu_space.default_app.phone.activity.DefaultPhoneAddActivity"
-            android:exported="true"> <!-- 전화 연락처 추가화면 -->
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:exported="false"/> <!-- 전화 연락처 추가화면 -->
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
         <activity
             android:name=".edu_space.default_app.camera.activity.DefaultCameraActivity"
             android:exported="false" /> <!-- 카메라 화면 -->
@@ -159,19 +149,24 @@
             android:exported="false" /> <!-- 앱 설치 -->
         <activity
             android:name=".edu_space.appinstall.installMainActivity"
-            android:exported="false" /> <!-- 앱 설치 메인 화면 -->
+            android:exported="false" /> <!-- 병윤님 앱 설치 메인 화면 -->
         <activity
             android:name=".edu_space.appinstall.AppInstallMainActivity"
-            android:exported="false" />
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".edu_space.appinstall.AppInstallSearchActivity"
             android:exported="false" /> <!-- 앱 설치 검색 화면 -->
+
         <activity
             android:name=".edu_space.appinstall.AppInstallLoadingActivity"
             android:exported="false" /> <!-- 앱 설치 로딩 화면 -->
-        <activity
-            android:name=".edu_space.appinstall.AppInstallLoading2Activity"
-            android:exported="false" /> <!-- 앱 설치 로딩2 화면 -->
+
         <activity
             android:name=".edu_space.kakaotalk.activity.KakaoMainActivity"
             android:exported="false" /> <!-- 카카오톡 메인 화면 -->
