--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -90,18 +90,20 @@
         <activity
             android:name=".edu_space.default_app.phone.activity.DefaultPhoneActivity"
             android:exported="false"/> <!-- 전화 화면 -->
+
         <activity
             android:name=".edu_space.default_app.phone.activity.DefaultPhoneCallActivity"
-            android:exported="true" > <!-- 전화 콜 화면 -->
+            android:exported="false"/> <!-- 전화 콜 화면 -->
+
+        <activity
+            android:name=".edu_space.default_app.phone.activity.DefaultPhoneAddActivity"
+            android:exported="true"> <!-- 전화 연락처 추가화면 -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".edu_space.default_app.phone.activity.DefaultPhoneAddActivity"
-            android:exported="false"/> <!-- 전화 연락처 추가화면 -->
 
         <activity
             android:name=".edu_space.default_app.camera.activity.DefaultCameraActivity"
@@ -113,10 +115,11 @@
         <!-- 환경설정 시작 -->
         <activity
             android:name=".edu_space.settingedu2.Setting2MainActivity"
-            android:exported="false" /> <!-- <activity -->
+            android:exported="false"/> <!-- <activity -->
         <!-- android:name=".edu_space.settingedu.activity.SettingEduActivity" -->
         <!-- android:exported="true" /> &lt;!&ndash; 환경설정 시작 &ndash;&gt; -->
         <!-- <activity -->
+
         <activity
             android:name=".edu_space.settingedu2.Setting2DisplayActivity"
             android:exported="false" />
