--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,16 +35,10 @@
             android:exported="false" /> <!-- 메시지 화면 -->
         <activity
             android:name=".edu_space.default_app.message.activity.DefaultMessageChattingActivity"
-            android:exported="true" > <!-- 메시지 채팅 화면 -->
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="false" /> <!-- 메시지 채팅 화면 -->
         <activity
             android:name=".edu_space.default_app.message.activity.DefaultMessageSelectActivity"
-            android:exported="false" />
+            android:exported="false" /><!--채팅 방법 선택-->
         <activity
             android:name=".edu_space.naver.activity.NaverSearchResultActivity"
             android:exported="false" /> <!-- 네이버 검색 결과 화면 -->
@@ -96,7 +90,6 @@
         <activity
             android:name=".edu_space.default_app.phone.activity.DefaultPhoneActivity"
             android:exported="false"/> <!-- 전화 화면 -->
-
         <activity
             android:name=".edu_space.default_app.phone.activity.DefaultPhoneCallActivity"
             android:exported="false" /> <!-- 전화 콜 화면 -->
@@ -104,6 +97,7 @@
         <activity
             android:name=".edu_space.default_app.phone.activity.DefaultPhoneAddActivity"
             android:exported="false"/> <!-- 전화 연락처 추가화면 -->
+
         <activity
             android:name=".edu_space.default_app.camera.activity.DefaultCameraActivity"
             android:exported="false" /> <!-- 카메라 화면 -->
